--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ beautifulsoup4==4.12.3
     # via nbconvert
 bleach==6.1.0
     # via nbconvert
+build==1.1.1
+    # via pip-tools
 certifi==2024.2.2
     # via
     #   httpcore
@@ -39,6 +41,8 @@ cffi==1.16.0
     # via argon2-cffi-bindings
 charset-normalizer==3.3.2
     # via requests
+click==8.1.7
+    # via pip-tools
 comm==0.2.1
     # via
     #   ipykernel
@@ -69,6 +73,7 @@ idna==3.6
     #   requests
 ipykernel==6.29.3
     # via
+    #   -c requirements-dev.in
     #   -r requirements.in
     #   jupyter
     #   jupyter-console
@@ -180,6 +185,7 @@ overrides==7.7.0
     # via jupyter-server
 packaging==23.2
     # via
+    #   build
     #   ipykernel
     #   jupyter-server
     #   jupyterlab
@@ -193,6 +199,10 @@ parso==0.8.3
     # via jedi
 pexpect==4.9.0
     # via ipython
+pip-tools==7.4.0
+    # via
+    #   -c requirements-dev.in
+    #   -r requirements.in
 platformdirs==4.2.0
     # via jupyter-core
 prometheus-client==0.20.0
@@ -217,6 +227,10 @@ pygments==2.17.2
     #   jupyter-console
     #   nbconvert
     #   qtconsole
+pyproject-hooks==1.0.0
+    # via
+    #   build
+    #   pip-tools
 python-dateutil==2.9.0.post0
     # via
     #   arrow
@@ -318,5 +332,11 @@ webencodings==0.5.1
     #   tinycss2
 websocket-client==1.7.0
     # via jupyter-server
+wheel==0.42.0
+    # via pip-tools
 widgetsnbextension==4.0.10
     # via ipywidgets
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
+# setuptools
