--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,107 +4,44 @@
 #
 #    pip-compile requirements-dev.in
 #
-appnope==0.1.4
-    # via ipykernel
-asttokens==2.4.1
-    # via stack-data
-build==1.1.1
-    # via pip-tools
-click==8.1.7
-    # via pip-tools
-comm==0.2.1
-    # via ipykernel
-debugpy==1.8.1
-    # via ipykernel
-decorator==5.1.1
-    # via ipython
-executing==2.0.1
-    # via stack-data
-ipykernel==6.29.3
-    # via -r requirements-dev.in
-ipython==8.22.2
-    # via ipykernel
-jedi==0.19.1
-    # via ipython
-jupyter-client==8.6.0
-    # via ipykernel
-jupyter-core==5.7.1
+contourpy==1.2.0
+    # via matplotlib
+cycler==0.12.1
+    # via matplotlib
+fonttools==4.49.0
+    # via matplotlib
+kiwisolver==1.4.5
+    # via matplotlib
+matplotlib==3.8.3
     # via
-    #   ipykernel
-    #   jupyter-client
-matplotlib-inline==0.1.6
-    # via
-    #   ipykernel
-    #   ipython
-nest-asyncio==1.6.0
-    # via ipykernel
+    #   -r requirements-dev.in
+    #   seaborn
 numpy==1.26.4
     # via
     #   -r requirements-dev.in
+    #   contourpy
+    #   matplotlib
     #   pandas
+    #   seaborn
 packaging==23.2
-    # via
-    #   build
-    #   ipykernel
+    # via matplotlib
 pandas==2.2.1
-    # via -r requirements-dev.in
-parso==0.8.3
-    # via jedi
-pexpect==4.9.0
-    # via ipython
-pip-tools==7.4.0
-    # via -r requirements-dev.in
-platformdirs==4.2.0
-    # via jupyter-core
-prompt-toolkit==3.0.43
-    # via ipython
-psutil==5.9.8
-    # via ipykernel
-ptyprocess==0.7.0
-    # via pexpect
-pure-eval==0.2.2
-    # via stack-data
-pygments==2.17.2
-    # via ipython
-pyproject-hooks==1.0.0
     # via
-    #   build
-    #   pip-tools
+    #   -r requirements-dev.in
+    #   seaborn
+pillow==10.2.0
+    # via matplotlib
+pyparsing==3.1.2
+    # via matplotlib
 python-dateutil==2.9.0.post0
     # via
-    #   jupyter-client
+    #   matplotlib
     #   pandas
 pytz==2024.1
     # via pandas
-pyzmq==25.1.2
-    # via
-    #   ipykernel
-    #   jupyter-client
+seaborn==0.13.2
+    # via -r requirements-dev.in
 six==1.16.0
-    # via
-    #   asttokens
-    #   python-dateutil
-stack-data==0.6.3
-    # via ipython
-tornado==6.4
-    # via
-    #   ipykernel
-    #   jupyter-client
-traitlets==5.14.1
-    # via
-    #   comm
-    #   ipykernel
-    #   ipython
-    #   jupyter-client
-    #   jupyter-core
-    #   matplotlib-inline
+    # via python-dateutil
 tzdata==2024.1
     # via pandas
-wcwidth==0.2.13
-    # via prompt-toolkit
-wheel==0.42.0
-    # via pip-tools
-
-# The following packages are considered to be unsafe in a requirements file:
-# pip
-# setuptools
